--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.6"
+    "mongoose": "^8.9.6",
+    "uuid": "^11.1.0"
   }
 }
